# duckdb-gsheets

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Makefile  PRIVACY.md  README.md  TODO.md  _config.yml  extension_config.cmake  oauth.html
.github/workflows/: MainDistributionPipeline.yml  deploy_docs.yml
docs/: .all-contributorsrc  .gitignore  evidence.plugins.yaml  package-lock.json  package.json
docs/pages/: +layout.svelte  development.md  index.md  oauth.md  privacy.md
scripts/: generate_google_token.py  requirements.txt  setup-custom-toolchain.sh
src/: gsheets_auth.cpp  gsheets_copy.cpp  gsheets_extension.cpp  gsheets_get_token.cpp  gsheets_read.cpp  gsheets_requests.cpp  gsheets_utils.cpp
src/include/: gsheets_auth.hpp  gsheets_copy.hpp  gsheets_extension.hpp  gsheets_get_token.hpp  gsheets_read.hpp  gsheets_requests.hpp  gsheets_utils.hpp  gsheets_writer.hpp
test/sql/: copy_multiple_vectors.test  copy_to.test  copyto.test  gsheets.test  read_gsheet.test  types.test
